--- a/Ch1_Degradation_abcoverNMDS.Rmd
+++ b/Ch1_Degradation_abcoverNMDS.Rmd
@@ -29,12 +29,33 @@ if (!require(devtools)) {
 }
 devtools::install_github("gavinsimpson/ggvegan")
 library(here)
+
 ```
 
 # Point-intercept transect data
 ### load csv for percent cover
 
 ```{r load csv}
+# Stand colors: INTACT, MATRIX, DEGRADED 
+cal_palette(name = "chaparral3", n = 3, type = "continuous") 
+deg <- "#D3E3CA"
+mat <- "#92A587"
+int <- "#2F3525"
+standcolors <- c(int, mat, deg)
+
+# Lifeform colors: shrub, grass, forb
+cal_palette(name = "chaparral3", n = 3, type = "continuous") 
+shrub <- "#D3E3CA"
+grass <- "#92A587"
+forb <- "#2F3525"
+lifeformcolors <- c(int, mat, deg)
+
+# Status colors: native, exotic 
+cal_palette(name = "chaparral1", n = 6, type = "continuous") 
+native <- "#AEBFA8"
+exotic <- "#F19B34"
+statuscolors <- c(native, exotic)
+
 # percent cover
 abcover_full_raw <- read.csv("deg_percentcover_byspecies_bylifeform.csv", header = TRUE, na.strings=c("","NA"))
 
@@ -737,8 +758,23 @@ shapiro.test(ab_div_bysiterep$num_species)
 
 ### NEED TO FIX CODE - KIT
 
-ab_sppr_nngrass <- ggplot(data = ab_diversity_2_native_nn, 
-       aes(x = nonnative_grass*100, y = length(unique(species)), shape = standtype, color = standtype)) + #shape = standtype.x, color = standtype.x
+ab_diversity_2_native_nn_plot <- ab_diversity_2_native_nn %>%
+  group_by(site_rep) %>%
+  summarize(richness = n_distinct(species))0
+
+hold <- rep(c("DEG1_1", "DEG1_2", "DEG1_3", "DEG2_4", "DEG2_5", "DEG2_6", "ENH1_1", "ENH1_2", "ENH1_3", "ENH2_4", "ENH2_5", "ENH2_6", "Intact_1_1", "Intact_2_2", "Intact_3_3"), times = 3)
+hold5 <- rep(c("DEG", "DEG", "DEG", "DEG", "DEG", "DEG", "ENH", "ENH", "ENH", "ENH", "ENH", "ENH", "Intact", "Intact", "Intact"), times = 3)
+hold2 <- rep(c("total", "native", "nn"), each = 15)
+hold3 <- rep(c(90,98,98,98,90,100,83,83,88,46,66,76,12,7,24), times = 3)
+hold4 <- c(10,6,7,7,7,9,8,8,10,14,10,12,6,12,9,5,2,2,3,3,5,3,3,5,10,6,6,5,10,6,5,4,5,4,4,4,5,5,5,4,3,6,1,1,3)
+abcover_diversity_plot <- data.frame(site_rep = hold, standtype = hold5, richness = hold4, nngrass = hold3, type = hold2)
+  
+ab_diversity_2_native_nn_2 <- ab_diversity_2_native_nn %>%
+  left_join(ab_diversity_2_native_nn_plot, by = "site_rep")
+
+
+ab_sppr_nngrass <- ggplot(data = abcover_diversity_plot, 
+       aes(x = nngrass, y = richness, shape = type, color = type)) +
   geom_point(size = 3, alpha = 0.8) +
   scale_shape_manual(values = c(16, 17, 18)) +
   ylim(0, 20)+
@@ -755,6 +791,7 @@ ab_sppr_nngrass <- ggplot(data = ab_diversity_2_native_nn,
   theme_bw() +  
   stat_poly_line() +
   stat_poly_eq(use_label(c("eq", "R2")))
+
 print(ab_sppr_nngrass)
 ```
 
